--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
-  "name": "dream_youth",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsnode /src/server"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.24.0",
-    "dotenv": "^11.0.0",
-    "express": "^4.17.2",
-    "sequelize": "^6.13.0",
-    "sequelize-cli": "^6.3.0"
-  },
-  "devDependencies": {
-    "ts-node": "^10.4.0"
-  }
+	"name": "dream_youth",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"test": "jest --detectOpenHandles --forceExit",
+		"start": "ts-node ./src/server.ts",
+    "build": "tsc"
+	},
+	"author": "dodo",
+	"license": "ISC",
+	"dependencies": {
+		"axios": "^0.24.0",
+		"dotenv": "^11.0.0",
+		"express": "^4.17.2",
+		"sequelize": "^6.13.0",
+		"sequelize-cli": "^6.3.0",
+		"supertest": "^6.2.1"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.16.7",
+		"@babel/preset-env": "^7.16.8",
+		"@babel/preset-typescript": "^7.16.7",
+		"@types/jest": "^27.4.0",
+		"@types/supertest": "^2.0.11",
+		"babel-jest": "^27.4.6",
+		"jes": "^0.6.1",
+		"jest": "^27.4.7",
+		"ts-jest": "^27.1.3",
+		"ts-node": "^10.4.0",
+		"typescript": "^4.5.4"
+	}
 }
