--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "typeRoots": ["./node_modules/@types", "./types"], 
+    "typeRoots": ["./node_modules/@types", ".src/types"], 
     "lib": ["esnext"],
     "target": "esnext",
     "module": "commonjs",
