--- a/package.json
+++ b/package.json
@@ -5,25 +5,34 @@
 	"main": "app.js",
 	"scripts": {
 		"test": "jest --detectOpenHandles --forceExit",
-		"start": "ts-node ./src/server.ts",
-    "build": "tsc"
+		"dev": "ts-node ./src/server.ts",
+		"build": "tsc",
+		"start": "node ./build/src/server.js"
 	},
 	"author": "dodo",
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^0.24.0",
+		"cookie-parser": "^1.4.6",
 		"dotenv": "^11.0.0",
 		"express": "^4.17.2",
+		"morgan": "^1.10.0",
+		"mysql2": "^2.3.3",
 		"sequelize": "^6.13.0",
 		"sequelize-cli": "^6.3.0",
-		"supertest": "^6.2.1"
+		"supertest": "^6.2.1",
+		"validator": "^13.7.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.16.7",
 		"@babel/preset-env": "^7.16.8",
 		"@babel/preset-typescript": "^7.16.7",
+		"@types/cookie-parser": "^1.4.2",
+		"@types/express": "^4.17.13",
 		"@types/jest": "^27.4.0",
+		"@types/morgan": "^1.9.3",
 		"@types/supertest": "^2.0.11",
+		"@types/validator": "^13.7.1",
 		"babel-jest": "^27.4.6",
 		"jes": "^0.6.1",
 		"jest": "^27.4.7",
